--- a/firebase.json
+++ b/firebase.json
@@ -21,7 +21,7 @@
       } ]
     },{
       "source": "/",
-      "headers": [{"key": "Link", "value": "</js/elm-f9957e.js>;rel=preload;as=script"}]
+      "headers": [{"key": "Link", "value": "</js/elm-29a365.js>;rel=preload;as=script"}]
     }],
     "rewrites": [
       {
